fix border-radius for scrollbar

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -111,6 +111,7 @@ main {
 	}
 	&::-webkit-scrollbar-track {
 		-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+		border-radius: 1rem;
 	}
 	&::-webkit-scrollbar-thumb {
 		background-color: var(--border-color);
